--- a/src/ui/features/profile/Profile.module.css
+++ b/src/ui/features/profile/Profile.module.css
@@ -15,7 +15,7 @@
 .avatarImg{
     position: relative;
     border-radius: 50%;
-    object-fit:cover;
+    object-fit:contain;
     width: 120px;
     height: 120px;
 }
