--- a/src/ui/features/chat/chatMessages/ChatMessages.module.css
+++ b/src/ui/features/chat/chatMessages/ChatMessages.module.css
@@ -1,6 +1,6 @@
 .messages {
     display: flex;
     flex-direction: column;
-    justify-content: start;
-    height: 402px;
+    overflow-y: scroll;
+    height: 81%;
 }
