--- a/src/ui/features/chat/chatModal/ChatModal.module.css
+++ b/src/ui/features/chat/chatModal/ChatModal.module.css
@@ -5,21 +5,20 @@
 
 .header {
     display: flex;
-    justify-content: end;
+    justify-content: space-between;
     align-items: center;
     padding: 10px;
     background: #efefef;
 }
 
 .title {
-    /*@include text(20px, 600, 20px);*/
-    margin: 0 auto;
-    position: relative;
-    left: 14px;
+    font-size: 20px;
+    font-weight:  bold;
+    padding-left: 10px;
 }
 
 .input {
-    width: 400px;
+    width: 100%;
     padding: 5px 10px 5px 18px;
     background: #efefef;
 }
