--- a/src/ui/features/chat/chatModal/ChatModal.module.css
+++ b/src/ui/features/chat/chatModal/ChatModal.module.css
@@ -2,6 +2,11 @@
     width: 400px;
     height: 500px;
 }
+@media (max-width: 500px) {
+    .paper{
+        width: 300px;
+    }
+}
 
 .header {
     display: flex;
